--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "autoprefixer": "^10.4.21",
     "bs58": "^5.0.0",
     "next": "^14.0.0",
+    "ogl": "^1.0.11",
     "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.17",
     "tweetnacl": "^1.0.3"
   },
