--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@solana/web3.js": "^1.87.6",
     "autoprefixer": "^10.4.21",
     "bs58": "^5.0.0",
+    "ethers": "^6.15.0",
     "next": "^14.0.0",
     "ogl": "^1.0.11",
     "postcss": "^8.5.6",
